# lambdaui

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  TODO.md
bench/: CMakeLists.txt
bench/paragraph_cache/: bench.cpp
cmake/: LambdaApp.cmake  LambdaDawn.cmake  LambdaEmbedBinary.cmake  LambdaWaylandProtocols.cmake
demos/: CMakeLists.txt
docs/: ARCHITECTURE.md  EVENTS.md  GETTING_STARTED.md  REACTIVITY.md  README.md  STYLE_GUIDE.md  UI_MODEL.md  composites.md  event_queue.md  framework-review-20260613.md  migrating-to-v5.md  optimization-attempts.md  reactive-graph.md  ui-view-body-style.md
include/: Lambda.hpp
scripts/: check_module_dependencies.sh  check_stale_symbols.sh  check_webgpu_backend_only.sh  (+1 more)
src/: CMakeLists.txt
src/Core/: Identity.cpp
src/Debug/: PerfCounters.hpp
src/Detail/: ResizeTrace.hpp
src/Graphics/: AttributedString.cpp  BatchPredicates.hpp  Canvas.cpp  CanvasGeometry.hpp  CoreTextSystem.hpp  CoreTextSystem.mm  GlyphAtlasAllocator.cpp  GlyphAtlasAllocator.hpp  ImageLoader.cpp  Path.cpp  PathFlattener.cpp  PathFlattener.hpp  PathGradient.hpp  PathTessellationCache.hpp  RenderTarget.cpp  Styles.cpp  SvgPath.cpp  TextCacheDebugOverlay.cpp  TextSystem.cpp  TextSystemPrivate.hpp  xxhash_impl.c
src/Graphics/Linux/: FreeTypeTextSystem.cpp  FreeTypeTextSystem.hpp
src/Graphics/Metal/: CanvasShaders.metal  GlyphAtlas.hpp  GlyphAtlas.mm  MetalCanvas.hpp  MetalCanvas.mm  MetalCanvasTypes.hpp  MetalDeviceResources.hpp  MetalDeviceResources.mm  MetalFrameRecorder.hpp  MetalFrameRecorder.mm  MetalImage.hpp  MetalImage.mm  MetalPathRasterizer.cpp  MetalPathRasterizer.hpp  MetalRenderTarget.mm  MetalShaderLibrary.hpp  MetalShaderLibrary.mm
src/Graphics/Platform/: RenderTarget.hpp
src/Graphics/Vulkan/: VulkanAllocator.cpp  VulkanCanvas.hpp  VulkanCanvasShared.hpp  VulkanCanvasTypes.hpp  VulkanCheck.hpp  VulkanContext.cpp  VulkanContextPrivate.hpp  VulkanDrawCommands.cpp  VulkanDrawCommands.hpp  VulkanFrameRecorder.cpp  VulkanFrameRecorder.hpp  VulkanGlyphAtlas.cpp  VulkanGlyphAtlas.hpp  VulkanGpuCanvas.cpp  VulkanImage.cpp  VulkanImage.hpp  VulkanPipelines.cpp  VulkanPipelines.hpp  VulkanRenderTarget.cpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp
src/Graphics/Vulkan/VulkanGpuCanvasParts/: VulkanCanvasApi.inc  VulkanCanvasDrawOps.inc  VulkanCanvasLifecycle.inc  VulkanCanvasMembers.inc  VulkanCanvasResources.inc  VulkanCommandRecording.inc  VulkanCore.inc  VulkanGlyphAtlas.inc  VulkanImages.inc  VulkanPipelines.inc  VulkanSwapchain.inc
src/Graphics/Vulkan/shaders/: backdrop.frag  backdrop_blur.frag  callout.frag  callout.vert  image.frag  image.vert  image_unpremultiply.frag  path.frag  path.vert  rect.frag  rect.vert
src/Graphics/WebGPU/: WebGpuCanvas.cpp  WebGpuCanvas.hpp  WebGpuContext.cpp  WebGpuContext.hpp  WebGpuRenderTarget.cpp
src/Layout/: LayoutHelpers.hpp
src/Layout/Algorithms/: StackLayout.cpp  StackLayout.hpp
src/Platform/Linux/: GpuSurfaceProvider.hpp  KmsApplication.cpp  KmsInput.cpp  KmsOutput.cpp  KmsPlatform.hpp  KmsWindow.cpp  WaylandApplication.cpp  WaylandNativeSurface.hpp  WaylandOutputs.hpp  WaylandScrollAccumulator.hpp  WaylandWindow.cpp
src/Platform/Linux/Common/: LinuxInputMapping.hpp  VtSwitch.hpp  XkbState.cpp  XkbState.hpp
src/Platform/Mac/: MacApplication.mm  MacClipboard.hpp  MacClipboard.mm  MacMetalWindow.mm  MacWebGpuWindow.mm
src/Reactive/: AnimationClock.cpp  Easing.cpp  Observer.cpp  Transition.cpp
src/SceneGraph/: ImageNode.cpp  LayoutDebugHooks.hpp  PathNode.cpp  RasterCacheNode.cpp  RectNode.cpp  RenderNode.cpp  RenderTargetScene.cpp  SceneBounds.hpp  SceneGraph.cpp  SceneInteraction.cpp  SceneNode.cpp  SceneNodeInternal.hpp  SceneRenderer.cpp  TextNode.cpp
src/UI/: Application.cpp  Application.mm  CommandRegistry.cpp  DebugFlags.hpp  Environment.cpp  EventQueue.cpp  InputFieldChrome.cpp  InputFieldLayout.cpp  LayoutDebugDump.cpp  MeasureContext.cpp  MenuRoleDefaults.cpp  MenuRoleDefaults.hpp  MountContext.cpp  MountRoot.cpp  Overlay.cpp  OverlaySurfaceHelpers.cpp  PopupMenu.cpp  Runtime.cpp  Theme.cpp  TransientPopoverHost.cpp  TransientPopoverHost.hpp  Window.cpp  WindowRender.cpp  WindowRender.hpp
src/UI/Detail/: TraversalContext.cpp
src/UI/Element/: ElementMeasurement.cpp  ElementModifiers.cpp  ElementTypeErasure.cpp  ModifierLayoutHelpers.hpp
src/UI/Platform/: Application.hpp  Window.hpp  WindowEventPump.hpp  WindowFactory.hpp
src/UI/ViewLayout/: ContainerScope.hpp  OverlayLayout.cpp  OverlayLayout.hpp  ScrollLayout.cpp  ScrollLayout.hpp
src/UI/Views/: Alert.cpp  AlertActionHelpers.hpp  BackdropBlur.cpp  Badge.cpp  Button.cpp  Card.cpp  Checkbox.cpp  Dialog.cpp  Divider.cpp  FileDialog.cpp  Grid.cpp  Icon.cpp  Image.cpp  InternalTextLayoutLeaf.hpp  LayoutContainers.cpp  ListView.cpp  Popover.cpp  PopoverCalloutPath.cpp  PopoverCalloutShape.cpp  ProgressBar.cpp  Rectangle.cpp  Render.cpp  ScrollView.cpp  SegmentedControl.cpp  Select.cpp  Slider.cpp  Svg.cpp  TableView.cpp  Text.cpp  TextEditUtils.cpp  TextInput.cpp  Toast.cpp  Toggle.cpp  Tooltip.cpp  TransformViews.cpp
tests/: AlertTests.cpp  AnimationTests.cpp  BatchPredicatesTests.cpp  BindableInferenceTests.cpp  CMakeLists.txt  EnvironmentKeyOtherTU.cpp  EnvironmentKeyTestSupport.hpp  EnvironmentKeyTests.cpp  EventQueueTests.cpp  FileDialogTests.cpp  ForTests.cpp  FreeTypeTextSystemTests.cpp  GlyphAtlasAllocatorTests.cpp  LayoutAlgorithmTests.cpp  LayoutRelayoutParityTests.cpp  LinuxInputMappingTests.cpp  MetalCanvasTests.mm  MountRootTests.cpp  ParagraphCacheIncrementalTests.cpp  ParagraphCacheTests.cpp  PathFlattenerTests.cpp  PathGradientTests.cpp  PathTessellationCacheTests.cpp  RenderOpacityTests.mm  RenderTargetTests.cpp  RuntimeInputTests.cpp  RuntimeTests.cpp  SceneGraphTests.cpp  SceneTraversalTests.cpp  ShowTests.cpp  SvgPathTests.cpp  TextEditUtilsTests.cpp  TextInputScrollTests.cpp  ThemeReactivityTests.cpp  VulkanRenderTargetTests.cpp  WaylandScrollAccumulatorTests.cpp
tests/Reactive/: BindableTests.cpp  ComputedTests.cpp  DiamondTests.cpp  EffectTests.cpp  ScopeTests.cpp  SignalTests.cpp
(+191 files in other folders)
